  * optimization: Stack allocation of arrays containing unboxed
    elements is slightly more efficient on x86 and x86-64.
  * enhancement: XREF information is now collected to references made
    to global variables using SYMBOL-VALUE and a constant argument.
  * enhancement: SIGINT now causes a specific condition
    SB-SYS:INTERACTIVE-INTERRUPT to be signalled.
  * bug fix: inlined calls to C now ensure 16byte stack alignment on
    x86/Darwin.
  * bug fix: bad type declaration in the CLOS implementation has
    been fixed. (reported by James Anderson)
  * bug fix: incorrect ROOM reporting on x86-64 has been fixed.
    (thanks to Lutz Euler)
  * bug fix: DEFSETF now allows &ENVIRONMENT and disallows &AUX as
    required by the CLHS. (reported by Samium Gromoff)
  * bug fix: dead unbound variable references now signal an error.
    (reported by Marco Monteiro)
  * bug fix: / with an unused value was being deleted in safe code.
    (thanks to Marco Monteiro and Kevin Reid)
  * bug fix: number of characters that can be written onto a single
    line in a file is unlimited.
  * bug fix: some GC deadlocks caused by asynchronous interrupts have
    been fixed by inhibiting interrupts for when GC is disbled.
  * bug fix: GETHASH, (SETF GETHASH), CLRHASH and REMHASH are now
    interrupt safe.
  * bug fix: binding *BREAK-ON-SIGNALS* to a value that is not a type
    specifier no longer causes infinite recursion.
  * improvement: the x86-64/darwin port now passes all tests and
    should be considered non-experimental.

changes in sbcl-1.0.4 relative to sbcl-1.0.3:
  * new platform: experimental support for x86-64/darwin (MacOS).
  * incompatible change: the thread-safe (on most platforms) getaddrinfo
    and getnameinfo sockets functions are used instead of gethostbyaddr
    and gethostbyname, on platforms where the newer functions are available.
    As a result, the ALIASES field of HOST-ENT will always be NIL on these
    platforms.