@@ -1976,11 +1976,10 @@ SB-KERNEL) have been undone, but probably more remain."
                "INVOKE-INTERRUPTION"
                "IO-TIMEOUT"
                "LIST-DYNAMIC-FOREIGN-SYMBOLS"
-               "MACRO" "MAKE-FD-STREAM" "MAKE-OBJECT-SET"
+               "MACRO" "MAKE-FD-STREAM"
                "MEMORY-FAULT-ERROR"
                "MEMMOVE"
                "NATURALIZE-BOOLEAN" "NATURALIZE-INTEGER"
-               "OBJECT-SET-OPERATION"
                "OS-COLD-INIT-OR-REINIT" "OS-CONTEXT-T" "OUTPUT-RAW-BYTES"
                "POINTER" "POINTER<" "POINTER>"
                "READ-N-BYTES" "REALLOCATE-SYSTEM-MEMORY" "RECORD-SIZE"
